--- a/index.html
+++ b/index.html
@@ -244,18 +244,23 @@
             Nossos <span>Parceiros</span>
           </h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s" />
-
           <p class="section-subtitle">
-            Condomínio Cambuci Independência - Edifício Condessa Luciana -
-            Edifício Monte Verde - Edifício Ipê Branco - Edifício Palais
-            Imperial - Edifício Place de Montebello - Edifício Juriti - Edifício
-            Santa Amália - Edifício Sunset Place - Moov Espaço Cerâmica -
-            Terraços do Campestre - Edifício Spazio Dellarte - Edifício Baluarte
-            - Alegre Gran Condomínio.
+            Condomínio Cambuci Independência
+            <span style="color: #04aa6d">♲</span> Edifício Condessa Luciana
+            Edifício Monte Verde <span style="color: #04aa6d">♲</span> Edifício
+            Ipê Branco <span style="color: #04aa6d">♲</span> Edifício Palais
+            Imperial <br />
+            Edifício Place de Montebello
+            <span style="color: #04aa6d">♲</span> Edifício Juriti
+            <span style="color: #04aa6d">♲</span> Edifício Santa Amália
+            <span style="color: #04aa6d">♲</span> Edifício Sunset Place
+            <span style="color: #04aa6d">♲</span> Moov Espaço Cerâmica <br />
+            Terraços do Campestre <span style="color: #04aa6d">♲</span> Edifício
+            Spazio Dellarte <span style="color: #04aa6d">♲</span> Edifício
+            Baluarte <span style="color: #04aa6d">♲</span> Alegre Gran
+            Condomínio
           </p>
-
           <br />
-
           <div class="row" id="clients-scroller">
             <div class="client-item-wrapper">
               <img
@@ -266,25 +271,27 @@
             </div>
 
             <div class="client-item-wrapper">
+              <img style="max-width: 200px" src="img/clients/sap.png" alt="" />
+            </div>
+
+            <div class="client-item-wrapper">
+              <img style="max-width: 200px" src="img/clients/lmc.png" alt="" />
+            </div>
+
+            <div class="client-item-wrapper">
               <img
                 style="max-width: 200px"
                 src="img/clients/gustavo.png"
                 alt=""
               />
             </div>
-            <div class="client-item-wrapper">
-              <img style="max-width: 200px" src="img/clients/lmc.png" alt="" />
-            </div>
+
             <div class="client-item-wrapper">
               <img
                 style="max-width: 200px"
                 src="img/clients/ponto.png"
                 alt=""
               />
-            </div>
-
-            <div class="client-item-wrapper">
-              <img style="max-width: 200px" src="img/clients/sap.png" alt="" />
             </div>
           </div>
         </div>
@@ -313,7 +320,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
               <div class="icon">
-                <i class="fa fa-level-down"></i>
+                <i class="fa fa-recycle"></i>
               </div>
               <h4>Reduzir</h4>
               <p>
@@ -326,7 +333,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.4s">
               <div class="icon">
-                <i class="fa fa-repeat"></i>
+                <i class="fa fa-recycle"></i>
               </div>
               <h4>Reutilizar</h4>
               <p>
@@ -345,7 +352,7 @@
               <p>
                 É transformar os resíduos que são cuidadosamente separados e
                 processados pela Riccinarra em matéria-prima para novos
-                produtos. Como: separando corretamente seu lixo.
+                produtos. Como: separando corretamente seus recicláveis.
               </p>
             </div>
           </div>
@@ -384,6 +391,7 @@
       </div>
     </section>
     <!-- End Video Promo Section -->
+
     <section id="team" class="section mt-200 pt-200">
       <div class="container">
         <div class="section-header">
@@ -392,12 +400,19 @@
           <p class="section-subtitle" style="text-align: justify-center">
             Segundo Conselho Nacional de Meio Ambiente (CONAMA), existe uma
             padronização internacional de dez cores de lixeiras para cada tipo
-            de resíduo que facilitam o descarte correto. Vermelho: plástico;
-            Laranja: resíduos perigosos (como pilhas e baterias); Amarelo:
-            metal; Verde: vidro; Azul: papel/papelão; Marrom: lixo orgânico;
-            Branco: resíduos de hospitais e serviço de saúde; Roxo: lixo
-            radioativo; Cinza: lixo não reciclável, contaminado ou cuja
-            separação não é possível; Preto: madeira.
+            de resíduo que facilitam o descarte correto.
+            <span style="color: #ea381b">●</span> Vermelho: plástico;
+            <span style="color: #f98715">●</span> Laranja: resíduos perigosos
+            (como pilhas e baterias);
+            <span style="color: #f7cb14">●</span> Amarelo: metal;
+            <span style="color: #26881b">●</span> Verde: vidro; <br />
+            <span style="color: #516bbf">●</span> Azul: papel/papelão;
+            <span style="color: #754c29">●</span> Marrom: lixo orgânico; ○
+            Branco: resíduos de hospitais e serviço de saúde;
+            <span style="color: #662d91">●</span> Roxo: lixo radioativo; <br />
+            <span style="color: #808285">●</span> Cinza: lixo não reciclável,
+            contaminado ou cuja separação não é possível;
+            <span style="color: black">●</span> Preto: madeira.
           </p>
         </div>
 
@@ -556,6 +571,183 @@
         </div>
       </div>
     </section>
+
+    <section id="blog" class="section mt-200 pt-200">
+      <div class="container">
+        <div class="section-header">
+          <h2 class="section-title">Você <span>Sabia?</span></h2>
+          <hr class="lines" />
+        </div>
+
+        <div class="row">
+          <div class="col-sm-12">
+            <div id="customers-blog" class="owl-carousel">
+              <!--TESTIMONIAL 1 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <div class="item-details">
+                    <p class="text-left">
+                      ♻️ Vamos Reciclar ♻️ <br />
+
+                      A Riccinarra Soluções Ambientais vai explicar o que pode e
+                      o que não pode ser reciclado ♻️ <br />
+
+                      ♻️ Papel ♻️ <br />
+
+                      Reciclamos quase todos os tipos de papéis: <br />
+
+                      Jornais, revistas, caixas, embalagens de papelão, papel
+                      sulfite, folhas de caderno, agendas, envelopes, embalagens
+                      de Tetra pack entre outras... <br />
+
+                      🚫 Papéis que não reciclamos: <br />
+
+                      Papel carbono, papel metalizado, papel higiênico,
+                      guardanapo engordurado, celofane, plastificado, fita
+                      crepe, adesivos em geral, fotografias, absorventes. Esses
+                      são alguns exemplos que não reciclamos.<br />
+
+                      ♻️Plásticos♻️<br />
+
+                      Reciclamos quase todos os tipos de plásticos: <br />
+
+                      Garrafas Pet, embalagens de produtos de limpeza em geral,
+                      baldes, bacias, cabides, sacolinhas plásticas, sacos
+                      plásticos, embalagens de shampoo. Esses são alguns
+                      exemplos que reciclamos !!!!! <br />
+
+                      Plásticos que não reciclamos: <br />
+
+                      Cabos de panela, adesivos, marmitas de isopor, bandejas de
+                      isopor de alimentos, tomadas, plásticos metalizados,
+                      fraldas descartáveis, preservativos, entre outros ...
+                      <br />
+
+                      ♻️ Metal ♻️<br />
+
+                      Reciclamos muito metal aqui no Brasil 🇧🇷 somos um dos
+                      maiores recicladores de metal: <br />
+
+                      Latinhas de alumínio, pregos, parafusos, panelas, latas de
+                      aço, produtos de ferro, bronze, metais em geral, cobre,
+                      bronze, entre outros 👍🏻<br />
+
+                      🚫 Metais que não reciclamos: <br />
+
+                      Esponja de aço, marmitas de alumínio, clipes, grampos
+                      entre outros ... <br />
+
+                      ♻️ Vidro ♻️<br />
+
+                      O vidro é 100% reciclável, a sua reciclagem é muito
+                      importante para a natureza. Veja alguns exemplos: <br />
+
+                      Garrafas, potes em geral, garrafões, frascos de limpeza,
+                      vidros de perfume etc. <br />
+
+                      🚫 Vidros que não reciclamos:<br />
+
+                      Espelho, cristal, louça, vidros temperados, cerâmica entre
+                      outros ... <br />
+
+                      ♻️ Bom, agora você já sabe um pouco mais sobre os
+                      materiais que reciclamos e quais não reciclamos, vamos por
+                      em prática tudo que aprendemos para melhorar a separação
+                      de nossos resíduos recicláveis ♻️<br />
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 1 -->
+
+              <!--TESTIMONIAL 1 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <div class="item-details">
+                    <p class="text-left">
+                      ♻️ Vamos Reciclar ♻️ <br />
+
+                      Você sabe como armazenar e descartar o óleo de cozinha
+                      corretamente? Ou você é daqueles que ainda descarta o óleo
+                      de cozinha no ralo da sua pia causando prejuízos para
+                      tubulação da sua casa e para nosso bem mais valioso a ÁGUA
+                      💦 ?! <br />
+
+                      Então se liga nas dicas da Riccinarra Soluções Ambientais:
+                      <br />
+
+                      O armazenamento correto do óleo para coleta é uma tarefa
+                      simples. Você sabia que o descarte inadequado de apenas 50
+                      mg de óleo chega a poluir mais de 25.000 litros de água
+                      💦? Mas com atitudes corretas e responsáveis faremos toda
+                      diferença! <br />
+
+                      ♻️ Siga nossas dicas para o descarte correto: ♻️ <br />
+
+                      1 ) Com a ajuda de um funil coloque óleo frio em uma
+                      garrafa pet; <br />
+
+                      2) Feche bem a garrafa assim que estiver cheia e em
+                      seguida reserve; <br />
+
+                      3) Retire o excesso de óleo da panela com uma folha de
+                      papel toalha (depois descarte o papel toalha no lixo
+                      orgânico); <br />
+
+                      4) Leve a garrafa Pet com o óleo descartado e armazenado
+                      no ponto de coleta seletiva ou reciclável do seu
+                      condomínio; <br />
+
+                      Nossos recursos hídricos agradecem!!! <br />
+
+                      Pequenos detalhes fazem toda a diferença em uma vida
+                      sustentável saudável! ♻️<br />
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 1 -->
+              <!--TESTIMONIAL 1 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <div class="item-details">
+                    <p class="text-left">
+                      ♻️ Vamos Reciclar ♻️ <br />
+                      A Riccinarra soluções ambientais vai explicar como
+                      descartar corretamente seu resíduo de vidro inteiro e
+                      quebrado!! O vidro é 100% reciclável podendo ser
+                      reaproveitado várias vezes
+                      <br />
+                      ♻️ A reutilização do vidro para a produção de novas
+                      embalagens consome menor quantidade de energia, e emite
+                      resíduos menos particulados de CO2, contribuindo para a
+                      preservação do meio ambiente.
+                      <br />
+                      ♻️ O vidro inteiro e limpo pode ser descartado sem nenhuma
+                      preocupação especial, é só levá-lo ao container correto e
+                      sinalizado em seu condomínio.
+                      <br />
+                      👍🏻 Agora, se ele estiver quebrado, também pode ser
+                      descartado no mesmo local, porém deve estar: <br />
+                      ⚠️ EMBALADO E IDENTIFICADO CORRETAMENTE PARA NÃO CAUSAR
+                      NENHUM DANO A TERCEIROS <br />
+                      ⚠️ Você sabia que vidros como: <br />
+                      🚫 Espelhos 🚫 Cristal 🚫 Cerâmica 🚫 Louça 🚫 Vidro
+                      Temperado 🚫 Ampolas de Medicamentos
+                      <br />
+                      NÃO SÃO RECICLÁVEIS: <br />
+                      🚫 Por isso ⚠️ NÃO ⚠️ podem ser colocados no mesmo
+                      container de vidros recicláveis ♻️
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 1 -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Team section End -->
 
     <!-- Download Section Start -->
@@ -616,6 +808,20 @@
                   </p>
                 </div>
               </div>
+
+              <div class="box-item left">
+                <span class="icon">
+                  <i class="fa fa-map"></i>
+                </span>
+                <div class="text">
+                  <h4>Logística de Reciclagem</h4>
+                  <p>
+                    Gerenciamos toda a logística de lixeiras em condomínios e
+                    empresas.
+                  </p>
+                </div>
+              </div>
+
               <div class="box-item left">
                 <span class="icon">
                   <i class="fa fa-map"></i>
@@ -661,6 +867,7 @@
                   </p>
                 </div>
               </div>
+
               <div class="box-item right">
                 <span class="icon">
                   <i class="fa fa-car"></i>
@@ -670,6 +877,19 @@
                   <p>
                     Para os mais elevados padrões temos veículos apropriados
                     para cada coleta.
+                  </p>
+                </div>
+              </div>
+
+              <div class="box-item left">
+                <span class="icon">
+                  <i class="fa fa-map"></i>
+                </span>
+                <div class="text">
+                  <h4>Logística de Reciclagem</h4>
+                  <p>
+                    Gerenciamos toda a logística de lixeiras em condomínios e
+                    empresas.
                   </p>
                 </div>
               </div>
