--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/Sucata de plásticoPETverde.jpeg"
+                    src="img/materiais/SucatadeplásticoPETverde.jpeg"
                     width="90%"
                   />
                   <div class="item-details">
@@ -1032,7 +1032,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/Sucata de Papelão.jpeg"
+                    src="img/materiais/SucatadePapelão.jpeg"
                     width="90%"
                   />
                   <div class="item-details">
