--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
             </div> 
           </div>
           <div class="col-sm-6 justify-content-center">
-            <img src="/img/materiais/tudo.png" alt="">
+            <img src="/img/materiais/Montagem.png" alt="">
           </div>
         </div>
         
@@ -969,7 +969,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/SucatadeplásticoPEAD.jpeg"
+                    src="img/materiais/SucataPlasticoPead.jpg"
                     width="90%"
                   />
                   <div class="item-details">
@@ -985,7 +985,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/SucatadeTETRAPAK.jpeg"
+                    src="img/materiais/SucataTetraPak.jpg"
                     width="90%"
                   />
                   <div class="item-details">
@@ -1000,7 +1000,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/SucatadeplásticoPETverde.jpeg"
+                    src="img/materiais/SucataPetVerde.jpg"
                     width="90%"
                   />
                   <div class="item-details">
@@ -1015,7 +1015,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/SucatadeplásticoPETcolorida.jpeg"
+                    src="img/materiais/SucataPetColorida.jpg"
                     width="90%"
                   />
                   <div class="item-details">
@@ -1032,7 +1032,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/SucatadePapelão.jpeg"
+                    src="img/materiais/SucataPapelao.jpg"
                     width="90%"
                   />
                   <div class="item-details">
@@ -1047,7 +1047,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/SucatadeplásticoPEcolorida(sacolinhademercado).jpeg"
+                    src="img/materiais/SucataSacolinha.jpg"
                     width="90%"
                   />
                   <div class="item-details" aling>
@@ -1063,7 +1063,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/SucatadeALUMÍNIO(latinha).jpeg"
+                    src="img/materiais/SucataAluminioLatinha.jpg"
                     width="90%"
                   />
                   <div class="item-details">
@@ -1079,7 +1079,7 @@
                               <div class="shadow-effect">
                                 <img
                                   class="img-fluid"
-                                  src="img/materiais/SucatadeplásticoPET(embalagens).jpeg"
+                                  src="img/materiais/SucataEmbalagens.jpg"
                                   width="90%"
                                 />
                                 <div class="item-details">
@@ -1095,7 +1095,7 @@
                                                           <div class="shadow-effect">
                                                             <img
                                                               class="img-fluid"
-                                                              src="img/materiais/SucatadeplásticoPET(cristal).jpeg"
+                                                              src="img/materiais/SucataPetCristal.jpg"
                                                               width="90%"
                                                             />
                                                             <div class="item-details">
@@ -1111,7 +1111,7 @@
                                                                           <div class="shadow-effect">
                                                                             <img
                                                                               class="img-fluid"
-                                                                              src="img/materiais/FardosdePET.jpeg"
+                                                                              src="img/materiais/FardosPet.jpg"
                                                                               width="90%"
                                                                             />
                                                                             <div class="item-details">
