tentativa correcao fotos

--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/Sucatamistadeferro.jpeg"
+                    src="img/materiais/SucataFerro.jpg"
                     width="90%"
                   />
                   <div class="item-details">
@@ -937,7 +937,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/Sucatadevidrointeiro.jpeg"
+                    src="img/materiais/SucataVidroInteiro.jpg"
                     width="90%"
                   />
                   <div class="item-details">
@@ -953,7 +953,7 @@
                 <div class="shadow-effect">
                   <img
                     class="img-fluid"
-                    src="img/materiais/Sucatadevidroquebrado.jpeg"
+                    src="img/materiais/SucataVidroQuebrado.jpg"
                     width="90%"
                   />
                   <div class="item-details">
