--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
               <!--END OF TESTIMONIAL 1 -->
             </div> 
           </div>
-          <div class="col-sm-6 justify-content-center">
+          <div class="col-sm-6">
             <img src="/img/materiais/Montagem.png" alt="">
           </div>
         </div>
