--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
             </div> 
           </div>
           <div class="col-sm-6">
-            <img src="/img/materiais/Grade.png" alt="">
+            <img src="/img/materiais/Grade.jpg" alt="">
           </div>
         </div>
         
