--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <img src="/img/materiais/Grade.jpg" alt="" />
+            <img src="img/materiais/Grade.jpg" alt="" />
           </div>
         </div>
       </div>
