--- a/index.html
+++ b/index.html
@@ -705,10 +705,10 @@
                       com o óleo descartado e armazenado no ponto de coleta
                       seletiva ou reciclável do seu condomínio; <br />
 
-                      Nossos recursos hídricos agradecem!!! <br />
+                      Nossos recursos hídricos agradecem! <br />
 
                       Pequenos detalhes fazem toda a diferença em uma vida
-                      sustentável saudável! ♻️<br />
+                      sustentável saudável! <br />
                     </div>
                   </div>
                 </div>
