--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
         </div>
 
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-12 col-md-6">
             <div id="customers-blog" class="owl-carousel">
               <!--TESTIMONIAL 1 -->
               <div class="item">
@@ -759,8 +759,8 @@
               <!--END OF TESTIMONIAL 1 -->
             </div>
           </div>
-          <div class="col-sm-6">
-            <img src="img/materiais/Grade.jpg" alt="" />
+          <div class="col-sm-12 col-md-6 align-self-center">
+            <img class="img-fluid" src="img/materiais/Grade.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -853,7 +853,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 align-self-center">
             <div class="show-box">
               <img src="img/logo.png" alt="" />
             </div>
@@ -936,7 +936,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataFerro.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -952,7 +952,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataVidroInteiro.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -968,7 +968,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataVidroQuebrado.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -984,7 +984,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataPlasticoPead.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -1000,7 +1000,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataTetraPak.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -1015,7 +1015,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataPetVerde.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -1030,7 +1030,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataPetColorida.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <h5 class="text-center">
@@ -1047,7 +1047,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataPapelao.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -1062,7 +1062,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataSacolinha.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details" aling>
                     <br />
@@ -1080,7 +1080,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataAluminioLatinha.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -1096,7 +1096,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataEmbalagens.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -1114,7 +1114,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/SucataPetCristal.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
@@ -1132,7 +1132,7 @@
                   <img
                     class="img-fluid"
                     src="img/materiais/FardosPet.jpg"
-                    width="90%"
+                    width="100%"
                   />
                   <div class="item-details">
                     <br />
