Alteraçoes feitas em reuniao

--- a/index.html
+++ b/index.html
@@ -381,7 +381,8 @@
                 Conheça um pouco mais sobre a Riccinarra e reciclagem.
               </p>
               <a
-                href="https://www.youtube.com/watch?v=ZcymnW5NRYQ"
+                href=""
+                
                 class="video-popup"
                 ><i class="lnr lnr-film-play"></i
               ></a>
@@ -759,8 +760,8 @@
               <!--END OF TESTIMONIAL 1 -->
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 align-self-center">
-            <img class="img-fluid" src="img/materiais/Grade.jpg" alt="" />
+          <div class="col-sm-12 col-md-6">
+            <img class="img-fluid" src="img/materiais/Montagem4.png" alt="" />
           </div>
         </div>
       </div>
@@ -1141,6 +1142,97 @@
                 </div>
               </div>
               <!--END OF TESTIMONIAL 10 -->
+
+              <!--TESTIMONIAL 10 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/materiais/SucataEletronica.jpg"
+                    width="100%"
+                  />
+                  <div class="item-details">
+                    <br />
+                    <h5 class="text-center">
+                      Sucata Eletrônica (Eletrônicos em Geral)
+                    </h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 10 -->
+
+                            <!--TESTIMONIAL 10 -->
+                            <div class="item">
+                              <div class="shadow-effect">
+                                <img
+                                  class="img-fluid"
+                                  src="img/materiais/SucataAcetato.jpg"
+                                  width="100%"
+                                />
+                                <div class="item-details">
+                                  <br />
+                                  <h5 class="text-center">
+                                    Sucatas de Chapas de Raio X (Acetato)
+                                  </h5>
+                                </div>
+                              </div>
+                            </div>
+                            <!--END OF TESTIMONIAL 10 -->
+
+                                                        <!--TESTIMONIAL 10 -->
+                                                        <div class="item">
+                                                          <div class="shadow-effect">
+                                                            <img
+                                                              class="img-fluid"
+                                                              src="img/materiais/SucataMista.jpg"
+                                                              width="100%"
+                                                            />
+                                                            <div class="item-details">
+                                                              <br />
+                                                              <h5 class="text-center">
+                                                                Sucata Plástica Mista (PS/ABS/PC)
+                                                              </h5>
+                                                            </div>
+                                                          </div>
+                                                        </div>
+                                                        <!--END OF TESTIMONIAL 10 -->
+
+                                                                                                                <!--TESTIMONIAL 10 -->
+                                                                                                                <div class="item">
+                                                                                                                  <div class="shadow-effect">
+                                                                                                                    <img
+                                                                                                                      class="img-fluid"
+                                                                                                                      src="img/materiais/SucataPlastico.jpg"
+                                                                                                                      width="100%"
+                                                                                                                    />
+                                                                                                                    <div class="item-details">
+                                                                                                                      <br />
+                                                                                                                      <h5 class="text-center">
+                                                                                                                        Sucata de Plástico (PP)
+                                                                                                                      </h5>
+                                                                                                                    </div>
+                                                                                                                  </div>
+                                                                                                                </div>
+                                                                                                                <!--END OF TESTIMONIAL 10 -->
+
+                                                                                                                         <!--TESTIMONIAL 10 -->
+                                                                                                                         <div class="item">
+                                                                                                                          <div class="shadow-effect">
+                                                                                                                            <img
+                                                                                                                              class="img-fluid"
+                                                                                                                              src="img/materiais/SucataPE.jpg"
+                                                                                                                              width="100%"
+                                                                                                                            />
+                                                                                                                            <div class="item-details">
+                                                                                                                              <br />
+                                                                                                                              <h5 class="text-center">
+                                                                                                                                Sucata de Plástico (PE)
+                                                                                                                              </h5>
+                                                                                                                            </div>
+                                                                                                                          </div>
+                                                                                                                        </div>
+                                                                                                                        <!--END OF TESTIMONIAL 10 -->
+
             </div>
           </div>
         </div>
@@ -1358,7 +1450,7 @@
                   <a href="#"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="instagram">
-                  <a href="#"><i class="fa fa-instagram"></i></a>
+                  <a href="www.instagram.com.br/riccinara"><i class="fa fa-instagram"></i></a>
                 </li>
               </ul>
             </div>
